# portnest

./: .gitignore  README.md  TAURI_MIGRATION.md  package-lock.json  package.json  runtime-config.example.json
.github/workflows/: release.yml
scripts/: after-pack.js  merge-tauri-latest.js  prepare-tauri-sidecars.js  release-version.js  write-runtime-config.js
src/: config.js  main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: index.html  tauri-bridge.js
